--- a/dademurphy/dademurphy.vcxproj.filters
+++ b/dademurphy/dademurphy.vcxproj.filters
@@ -45,6 +45,9 @@
     <ClInclude Include="Monitor.h">
       <Filter>Header Files</Filter>
     </ClInclude>
+    <ClInclude Include="Constants.h">
+      <Filter>Header Files</Filter>
+    </ClInclude>
   </ItemGroup>
   <ItemGroup>
     <ClCompile Include="dllmain.cpp">
